# DataLine

./: CMakeLists.txt  ConfigClass.cpp  ConfigClass.h  LICENSE  ManagerClass.cpp  ManagerClass.h  MergeSortedClass.cpp  MergeSortedClass.h  ParametersClass.cpp  ParametersClass.h  SeparatorClass.cpp  SeparatorClass.h  main.cpp  readMe  setLimit.h  techOps.cpp  techOps.h  test.cpp
